@@ -1,3 +1,7 @@
+2011-12-14  Frank Warmerdam  <warmerdam@google.com>
+
+	* src/pj_open_lib.c: make sure we check errno before logging messages (#131).
+
 2011-12-13  Frank Warmerdam  <warmerdam@google.com>
 
 	* src/PJ_healpix.c, etc: added healpix support contributed by
